[gd_scene load_steps=13 format=3 uid="uid://bolpjbxigoifs"]

[ext_resource type="Script" uid="uid://bjrgai03y0b04" path="res://scripts/swing_hand_3d.gd" id="1_swing_hand_script"]
[ext_resource type="PackedScene" uid="uid://d1uvcisduvvj" path="res://addons/card_3d/scenes/card_collection_3d.tscn" id="2_collection_scene"]
[ext_resource type="Script" uid="uid://bgkontnk0cnl" path="res://addons/card_3d/scripts/drag_controller.gd" id="3_drag_script"]
[ext_resource type="Texture2D" uid="uid://c072mhp0dxk11" path="res://textures/Swing Card (1).png" id="4_dropzone_texture"]

[sub_resource type="BoxMesh" id="BoxMesh_placeholder"]
size = Vector3(20, 0.1, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_placeholder"]
albedo_color = Color(0.2, 0.3, 0.2, 1)

[sub_resource type="SphereMesh" id="SphereMesh_corner"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_red"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_blue"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yellow"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_dropzone"]
size = Vector2(2.5, 3.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dropzone"]
transparency = 1
cull_mode = 2
albedo_texture = ExtResource("4_dropzone_texture")

[node name="SwingHand3D" type="Node3D"]
script = ExtResource("1_swing_hand_script")

[node name="TablePlaceholder" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
visible = false
mesh = SubResource("BoxMesh_placeholder")
surface_material_override/0 = SubResource("StandardMaterial3D_placeholder")

[node name="CornerFrontLeft" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 5)
visible = false
mesh = SubResource("SphereMesh_corner")
surface_material_override/0 = SubResource("StandardMaterial3D_red")

[node name="CornerFrontRight" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 5)
visible = false
mesh = SubResource("SphereMesh_corner")
surface_material_override/0 = SubResource("StandardMaterial3D_blue")

[node name="CornerBackLeft" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -5)
visible = false
mesh = SubResource("SphereMesh_corner")
surface_material_override/0 = SubResource("StandardMaterial3D_yellow")

[node name="CornerBackRight" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -5)
visible = false
mesh = SubResource("SphereMesh_corner")
surface_material_override/0 = SubResource("StandardMaterial3D_red")

[node name="CenterMarker" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("SphereMesh_corner")
surface_material_override/0 = SubResource("StandardMaterial3D_blue")

[node name="DragController" type="Node3D" parent="."]
script = ExtResource("3_drag_script")

[node name="SwingHand" parent="DragController" instance=ExtResource("2_collection_scene")]

[node name="SwingSlot" parent="DragController" instance=ExtResource("2_collection_scene")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.2930186, 5, 0)
highlight_on_hover = false

[node name="DropZoneVisual" type="MeshInstance3D" parent="DragController/SwingSlot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("PlaneMesh_dropzone")
surface_material_override/0 = SubResource("StandardMaterial3D_dropzone")
